<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".PickMovieGuest">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingBottom="45dp"
        android:text="Select service to attend"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ListView
            android:id="@+id/listPictures"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scrollbarSize="?attr/listPreferredItemHeightLarge" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0.09"
        android:padding="10dp">


        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:text="Date:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/textViewTime"
            android:layout_toRightOf="@+id/textViewTime"
            android:text="@string/textViewDate1"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewTime1"
            android:layout_alignBottom="@+id/textViewTime1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="Time:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewDate1"
            android:layout_alignLeft="@+id/textViewDate1"
            android:layout_centerVertical="true"
            android:text="@string/textViewTime1"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/textViewTime"
            android:layout_alignBottom="@+id/textViewTime1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/textViewTickets"
            android:layout_toRightOf="@+id/textViewTickets"
            android:backgroundTint="@color/white"
            android:textAlignment="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewTickets"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/textViewTickets"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinnerTime"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="Pick Date"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="Children"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="Seniors"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_centerHorizontal="true"
            android:text="Adults"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.57">

        <NumberPicker
            android:id="@+id/numberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberPicker1"
            android:layout_alignBottom="@+id/numberPicker1"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/numberPicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/numberPicker3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberPicker2"
            android:layout_alignBottom="@+id/numberPicker2"
            android:layout_marginStart="109dp"
            android:layout_marginLeft="109dp"
            android:layout_toEndOf="@+id/numberPicker2"
            android:layout_toRightOf="@+id/numberPicker2"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>
    </RelativeLayout>

    <Button
        android:id="@+id/btnProceedToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:layout_alignParentBottom="true"
        android:text="@string/btnProceedToPay" />
</LinearLayout>